
= ruote-dm - CHANGELOG.txt


== ruote-dm 2.1.9    released 2010/03/24

- storage participant queries with more than 1 field are now possible


== ruote-dm 2.1.7    released 2010/02/15

- adapted to latest Ruote::StorageHistory
- implemented DmStorage#query_workitems


== ruote-dm 2.1.6    released 2010/02/07

- first release
