@@ -2,6 +2,11 @@
 = ruote-dm - CHANGELOG.txt
 
 
+== ruote-dm 2.1.10    not yet released
+
+- _rev now starting at 1 (instead of 0)
+
+
 == ruote-dm 2.1.9    released 2010/03/24
 
 - storage participant queries with more than 1 field are now possible
